# devhelp

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
devhelp/: Makefile.am  devhelp.gedit-plugin.desktop.in  gedit-devhelp-plugin.c  gedit-devhelp-plugin.h  gsc-provider-devhelp.c  gsc-provider-devhelp.h
devhelp/.svn/: all-wcprops  entries
devhelp/.svn/text-base/: ChangeLog.svn-base  Makefile.am.svn-base  Makefile.in.svn-base  dict-panel.c.svn-base  dict-panel.h.svn-base  gedit-dictionary-plugin.c.svn-base  gedit-dictionary-plugin.h.svn-base
po/: LINGUAS
po/.svn/: all-wcprops  entries
po/.svn/text-base/: POTFILES.in.svn-base  missing.svn-base
